# ORB16

./: .clang-format  .gitignore  CMakeLists.txt  README.md  setup.py  test_pyorb.py
python/: CMakeLists.txt  cv16.cc  pyORB16.cc  requirements.txt  test_pycanny.py  test_pyfast.py  test_pyorb.py  test_utils.py
src/: ORB16.cc  ORB16.h  buffer_area.hpp  canny16.cc  canny16.h  fast16.cc  fast16.h  fast16_score.cc  fast16_score.h  pyORB16.cc  test_ORB16.cc  test_canny16.cc  test_detection.cc  test_fast16.cc
